--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -20,6 +20,7 @@
     d:DesignHeight="300"
     d:DesignWidth="300"
     Name="ChatListToolWindow"
+    IsVisibleChanged="ChatListToolWindow_IsVisibleChanged"
     >
     <UserControl.Resources>
         <!-- Прокси для передачи контекста в ContextMenu -->
