Initial version if context item scanner.

--- a/FreeAIr/UI/Embedillo/EmbedilloControl.xaml
+++ b/FreeAIr/UI/Embedillo/EmbedilloControl.xaml
@@ -37,6 +37,7 @@
             VerticalAlignment="Stretch"
             VerticalContentAlignment="Stretch"
             Focusable="True"
+            WordWrap="True"
             >
             <Behaviors:Interaction.Behaviors>
                 <local:EnterKeyBehavior
